--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="container">
   <div id="daniel">
     <div class="profile">
-      <img src="/images/image-daniel.jpg" alt="Daniel" class="daniel">
+      <img src="images/image-daniel.jpg" alt="Daniel" class="daniel">
       <div class="detail">
         <p class="name">Daniel Clifford</p>
         <p class="title">Verified Graduate</p>
