--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div id="walters">
     <div class="profile">
-      <img src="/images/image-jonathan.jpg" alt="walters" class="daniel">
+      <img src="images/image-jonathan.jpg" alt="walters" class="daniel">
       <div class="detail">
         <p class="name">Jonathan Walters</p>
         <p class="title">Verified Graduate</p>
@@ -46,7 +46,7 @@
 
   <div id="harmon">
     <div class="profile">
-      <img src="/images/image-jeanette.jpg" alt="Harmon" class="daniel">
+      <img src="images/image-jeanette.jpg" alt="Harmon" class="daniel">
       <div class="detail">
         <p class="name">Jeanette Harmon</p>   
         <p class="title"> Verified Graduate</p>  
@@ -58,7 +58,7 @@
 
   <div id="Abrams">
     <div class="profile">
-      <img src="/images/image-patrick.jpg" alt="Abrams" class="daniel">
+      <img src="images/image-patrick.jpg" alt="Abrams" class="daniel">
       <div class="detail">
         <p class="name">Patrick Abrams</p>    
         <p class="title">Verified Graduate</p>  
@@ -70,7 +70,7 @@
 
   <div id="kira">
     <div class="profile">
-      <img src="/images/image-kira.jpg" alt="Kira" class="daniel">
+      <img src="images/image-kira.jpg" alt="Kira" class="daniel">
       <div class="detail">
         <p class="name"> Kira Whittle</p> 
         <p class="title"> Verified Graduate</p>
